[package]
name = "preprocess-cancellation"
version = "0.3.0-alpha.2"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0.71"
clap = { version = "4.3.10", features = ["derive"] }
clap-verbosity-flag = "2.0.1"
dashmap = "5.4.0"
enum_dispatch = "0.3.11"
generator = "0.7.5"
geo = "0.25.1"
itertools = "0.11.0"
once_cell = "1.18.0"
ordered-float = "3.7.0"
regex = "1.8.4"
serde_json = "1.0.100"
tempfile = "3.6.0"
thiserror = "1.0.40"
tracing = "0.1.37"
tracing-subscriber = "0.3.17"
