[package]
name = "preprocess_cancellation"
description = "GCode processor to add klipper exclude-object markers"
authors = ["Morton Jonuschat <mjonuschat@gmail.com>", "Franklyn Tackitt <im@frank.af>"]
readme = "README.md"
version = "0.3.0-alpha.2"
edition = "2021"
homepage = "https://github.com/mjonuschat/preprocess-cancellation"
repository = "https://github.com/mjonuschat/preprocess-cancellation"
license = "GPL-3.0-only"
exclude = ["/GCode/"]
publish = false

[[bin]]
name = "preprocess_cancellation"

[dependencies]
any_ascii = "0.3.2"
anyhow = "1.0.71"
clap = { version = "4.3.10", features = ["derive"] }
clap-verbosity-flag = "2.0.1"
dashmap = "5.4.0"
enum_dispatch = "0.3.11"
generator = "0.7.5"
geo = "0.25.1"
itertools = "0.11.0"
once_cell = "1.18.0"
ordered-float = "3.7.0"
regex = "1.8.4"
serde_json = "1.0.100"
tempfile = "3.6.0"
thiserror = "1.0.40"
tracing = "0.1.37"
tracing-subscriber = "0.3.17"
